# termii-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
src/lib/: macros.rs  mod.rs
src/lib/async_impl/: mod.rs
src/lib/async_impl/http/: client.rs
src/lib/async_impl/rest/: mod.rs  termii.rs
src/lib/async_impl/rest/insights/: balance.rs  history.rs  insights.rs  mod.rs  search.rs  status.rs
src/lib/async_impl/rest/switch/: campaign.rs  messaging.rs  mod.rs  number.rs  sender_id.rs  switch.rs  templates.rs
src/lib/async_impl/rest/token/: in_app_token.rs  mod.rs  request.rs  token.rs  verify.rs
src/lib/blocking/: mod.rs
src/lib/blocking/http/: client.rs
src/lib/blocking/rest/: mod.rs  termii.rs
src/lib/blocking/rest/insights/: balance.rs  history.rs  insights.rs  mod.rs  search.rs  status.rs
src/lib/blocking/rest/switch/: campaign.rs  messaging.rs  mod.rs  number.rs  sender_id.rs  switch.rs  templates.rs
src/lib/blocking/rest/token/: in_app_token.rs  mod.rs  request.rs  token.rs  verify.rs
src/lib/common/: errors.rs  mod.rs  pagination.rs
src/lib/common/insights/: balance.rs  history.rs  mod.rs  search.rs  status.rs
src/lib/common/switch/: campaign.rs  messaging.rs  mod.rs  number.rs  sender_id.rs  templates.rs
src/lib/common/token/: in_app_token.rs  mod.rs  request.rs  verify.rs
