[package]
name = "termii-rust"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Rust SDK for termii a messaging provider."
keywords = ["termii", "sms", "client"]
categories = ["web-programming::http-client"]
repository = "https://github.com/shepherd1530/termii-rust"
homepage = "https://github.com/shepherd1530/termii-rust"
authors = ["Samuel Ajisegiri <samajisegiri@gmail.com>"]
readme = "README.md"
documentation = "https://docs.rs/termii-rust/"



[dependencies]
thiserror = "1.0"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.17.0", default-features = false, optional = true }
reqwest = { version = "0.11", default-features = true, optional = true }
async-trait = { version = "0.1.53", default-features = true, optional = true }


[features]
default = ["tokio/full", "reqwest/json", "async-trait"]
blocking = ["reqwest/blocking", "reqwest/json"]


[lib]
name = "termii_rust"
path = "src/lib/mod.rs"


[package.metadata.docs.rs]
all-features = true
